<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_Team_A"
                    style="@style/TxtTeam"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/txt_Score_Team_A"
                    style="@style/TxtTeam"
                    android:layout_marginBottom="24dp"
                    android:text="@string/_0"
                    android:textColor="#000000"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btn_6PointsA"
                    style="@style/Btn"
                    android:onClick="add6PointsToA"
                    android:text="@string/_6points" />

                <Button
                    android:id="@+id/btn_3PointsA"
                    style="@style/Btn"
                    android:onClick="add3PointsToA"
                    android:text="@string/_3points" />

                <Button
                    android:id="@+id/btn_2PointsA"
                    style="@style/Btn"
                    android:onClick="add2PointsToA"
                    android:text="@string/_2points" />

                <Button
                    android:id="@+id/btn_FreeThrowA"
                    style="@style/Btn"
                    android:onClick="add1PointToA"
                    android:text="@string/_1points" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_Team_B"
                    style="@style/TxtTeam"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/txt_Score_Team_B"
                    style="@style/TxtTeam"
                    android:layout_marginBottom="24dp"
                    android:text="@string/_0"
                    android:textColor="#000000"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btn_6PointsB"
                    style="@style/Btn"
                    android:onClick="add6PointsToB"
                    android:text="@string/_3points" />

                <Button
                    android:id="@+id/btn_3PointsB"
                    style="@style/Btn"
                    android:onClick="add3PointsToB"
                    android:text="@string/_3points" />

                <Button
                    android:id="@+id/btn_2PointsB"
                    style="@style/Btn"
                    android:onClick="add2PointsToB"
                    android:text="@string/_2points" />

                <Button
                    android:id="@+id/btn_FreeThrowB"
                    style="@style/Btn"
                    android:onClick="add1PointToB"
                    android:text="@string/_1points" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_Reset"
            style="@style/Btn"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="clearScore"
            android:text="@string/reset_score" />

    </RelativeLayout>

</LinearLayout>